Version 0.3.3 (2012-12-15)
------------------------------------------------------------

* `print.summary.plspm` shows Model Specifications in an aligned (pretty) way

* new data set `offense` for Offense Performance model (NFL teams 2011)

* new data set `college` for GPA model (life sciences undergrad students)

* new data set `cereals` for Cereals Rating model (cereals)

* internal `get_boots` changed to 95% confidence interval

Version 0.3.2 (2012-11-17)
------------------------------------------------------------

* new data set `technology` for User and Acceptance of Technology model

Version 0.3.1 (2012-11-12)
------------------------------------------------------------

NEW FEATURES AND FUNCTIONS

* PLSTROIKA has started (restructuring my pls packages)

* Revamped version of the renowned plspm package that from now on will only contain functions related to Partial Least Squares Path Modeling. Other methods such as nipasl, pls regression, and canonical analysis, now happily live in the package "plsdepot"

* `plspm` has updated documentation

* New implemented functions `innerplot` and `outerplot` to provide simpler but prettier graphics

* delete split option for plotting loadings and outer weights 

* `plot.plspm.groups` has been deleted

* `resclus.plot` has been deleted

* internal functions are exported for developing reasons. Don't use them unless you're me or a super user or a package developer

* Using 'roxygen2' for documentation and literate programming

BUG FIXES

* Pain-in-the-butt warning message about 'sd() deprecated' has been tackled