@@ -28,3 +28,4 @@ export(plspm.groups)
 export(rebus.pls)
 export(rebus.test)
 export(res.clus)
+export(rescale)
